--- a/projects/lectures/제주서중.md
+++ b/projects/lectures/제주서중.md
@@ -1,11 +1,10 @@
 ---
 layout: page
-title: 제주 서중 IT 직업인 진로 특강
+title: IT 직업인 진로 특강 - 중학생
 ---
 
-* 기간 : 2018년 11월 8일 2시간
-* 장소 : 제주 서중
-* 대상 : 제주 서중 1학년 남자반 30명, 여자반 30명
+* 기간 : 2018년
+* 대상 : 중학교 1학년
 * 목표 : IT 직업 종류, 게임 프로그래머 알기
 
 ![image](/assets/images/lectures/job/IMG_2634.jpg)
